--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -10,6 +10,7 @@ body {
 main {
   display: flex;
   width: 99%;
+  height: 99vh;
   padding: 50px 20px;
   background-color: #fafaf9;
   border-radius: 20px;
