--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,8 +9,9 @@ body {
 }
 main {
   display: flex;
-  width: 99%;
-  height: 99vh;
+  align-items: center;
+  width: 100%;
+  height: 90vh;
   padding: 50px 20px;
   background-color: #fafaf9;
   border-radius: 20px;
@@ -24,7 +25,7 @@ main {
 .section-right {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
 }
 
 .card-top,
